--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ cgmath = "0.16.1"
 gl = "0.10.0"
 glfw = "0.23.0"
 image = "0.19.0"
+byteorder = "1.3.2"
+flate2 = { version = "1.0", features = ["zlib"], default-features = false }
