--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ glfw = "0.23.0"
 image = "0.19.0"
 byteorder = "1.3.2"
 flate2 = { version = "1.0", features = ["zlib"], default-features = false }
+
+serde = { version = "1.0", features = ["derive"] }
